# digest-pure

./: .travis.yml  README.md  digest-pure.cabal
src/Data/Digest/Pure/: Adler32.hs  CRC32.hs
test/: TestSuiteDigestPure.hs
