Name:               digest-pure
Version:            0.0.1
License:            BSD3
Copyright:          Daniël de Kok
Maintainer:         Daniël de Kok <me@danieldk.eu>
Author:             Daniël de Kok <me@danieldk.eu>
Category:           Cryptography
Synopsis:           Pure hash functions for bytestrings
Description:        This package provides pure hash functions for bytestrings.
Build-Type:         Simple
Cabal-Version:      >= 1.4

Library
  HS-Source-Dirs:       src
  Build-Depends:        base >= 4 && < 5, bytestring >= 0.9.1.10 && < 0.9.2
  Exposed-modules:      Data.Digest.Pure.Adler32
  Ghc-Options:          -Wall -O2
