Name:               digest-pure
Version:            0.0.1
License:            BSD3
Copyright:          Copyright 2011 Daniël de Kok
Maintainer:         Daniël de Kok <me@danieldk.eu>
Author:             Daniël de Kok <me@danieldk.eu>
Category:           Cryptography
Synopsis:           Pure hash functions for bytestrings
Description:        This package provides pure hash functions for bytestrings.
Build-Type:         Simple
Cabal-Version:      >= 1.4

Library
  Build-Depends:        base >= 4 && < 5, bytestring >= 0.9.1.10 && < 0.9.2
  Exposed-modules:      Data.Digest.Pure.Adler32
  Ghc-Options:          -Wall -O2
  HS-Source-Dirs:       src

Test-Suite TestSuiteDigestPure
  Type:                 exitcode-stdio-1.0
  Main-Is:              TestSuiteDigestPure.hs
  Build-Depends:        base >= 4 && < 5, bytestring >= 0.9.1.10 && < 0.9.2,
                        QuickCheck >= 2.4.0.1, digest >= 0.0.0.9
  HS-Source-Dirs:       src, test
